# sedgewick_algorithms_in_cpp

./: README.md
src/: CMakeLists.txt
src/5_82-84/: CMakeLists.txt  Doxyfile  build.sh
src/5_82-84/server/: CMakeLists.txt  main.cpp
src/5_82-84/server/inc/: aparser.h  item.h  noRecursiveParser.h  node.h  recursiveParser.h
src/5_82-84/server/src/: aparser.cpp  item.cpp  noRecursiveParser.cpp  node.cpp  recursiveParser.cpp
src/5_82-84/server_test/: CMakeLists.txt  main.cpp  tNoRecursiveParser.cpp  tRecursiveParser.cpp
